<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MemoryAlt">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="192dp"
        android:layout_height="55dp"
        android:layout_marginTop="32dp"
        android:text="@string/memoryWelcome"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="322dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:text="@string/memoryExplain"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/fill"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btnYes"
        android:layout_width="155dp"
        android:layout_height="70dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="120dp"
        android:text="@string/btnYes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnNo"
        android:layout_width="155dp"
        android:layout_height="70dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="120dp"
        android:text="@string/btnNo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textPosEx"
        android:layout_width="220dp"
        android:layout_height="25dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="20dp"
        android:text="@string/posCount"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/textNegEx"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textNegEx"
        android:layout_width="220dp"
        android:layout_height="25dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="210dp"
        android:text="@string/negCount"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textPosCount"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="20dp"
        android:text="@string/fill"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/textNegCount"
        app:layout_constraintStart_toEndOf="@+id/textPosEx" />

    <TextView
        android:id="@+id/textNegCount"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="210dp"
        android:text="@string/fill"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textNegEx" />

    <Button
        android:id="@+id/btnRdy"
        android:layout_width="337dp"
        android:layout_height="48dp"
        android:layout_marginBottom="60dp"
        android:text="@string/oneTimeBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>